Fixes case study header overlap bug for mobile

--- a/src/components/CaseStudy/styles.scss
+++ b/src/components/CaseStudy/styles.scss
@@ -184,7 +184,7 @@
     height: auto;
   }
 
-  h1.casestudy__title {
+  .casestudy__title {
     font-size: 6rem;
     //media queries
     @media only screen and (max-height: 430px) {
@@ -202,7 +202,7 @@
       font-size: 4.2rem;
     }
     @include breakpoint($mobile-sm) {
-      font-size: 3.2rem;
+      font-size: 2.8rem;
     }
   }
 }
